--- a/templates/termandcondition.html
+++ b/templates/termandcondition.html
@@ -26,7 +26,7 @@
             <div class="brand-container">
                 <div class="brand-logo" onclick="window.location.href='index.html'">
                     <!-- <i class="fas fa-brain logo-icon"></i> -->
-                     <img src="/static/images/123.jpg" alt="MirrorMind Logo" class="step-logo">
+                     <img src="/static/images/123.png" alt="MirrorMind Logo" class="step-logo">
                     <h1 class="brand-name">MirrorMind</h1>
                 </div>
                 <p class="brand-tagline">Smarter Learning, Brighter Minds.</p>
@@ -294,7 +294,7 @@
             <div class="footer-container">
                 <div class="footer-content">
                     <div class="footer-logo">
-                        <img src="/static/images/123.jpg" alt="MirrorMind Logo" class="step-logo1">
+                        <img src="/static/images/123.png" alt="MirrorMind Logo" class="step-logo1">
                         <div class="footer-brand">
                             <h3>MirrorMind</h3>
                             <p>Smarter Learning, Brighter Minds.</p>
