--- a/templates/student_reset_password.html
+++ b/templates/student_reset_password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password | MirrorMind</title>
-    <link rel="stylesheet" href="/static/css/forgot_password.css">
+    <link rel="stylesheet" href="/static/css/student _reset_password.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -285,6 +285,6 @@
         </div>
     </div>
 
-    <script src="/static/js/forgot_password.js"></script>
+    <script src="/static/js/student_reset_password.js"></script>
 </body>
 </html>
